test/expected/set_lang_xxx.out
cdecl> set lang=xxx
                ^
10: error: "xxx": unknown language
